# OpheliaOS

./: .gitignore  Cargo.toml  Makefile  README-zh.md  README.md
.cargo/: config
kernel/: Cargo.toml  Makefile  README.md
kernel/src/: batch.rs  console.rs  lang_item.rs  link_app.S  logger.rs  main.rs
kernel/src/syscall/: fs.rs  mod.rs  process.rs
kernel/src/trap/: mod.rs
logger/: Cargo.toml
logger/src/: lib.rs  macros.rs
ophelia_os/.cargo/: config
ophelia_os/src/: entry.asm  lang_item.rs  linker.ld  main.rs
os/: Cargo.toml  Makefile  README-zh.md
os/src/: batch.rs  console.rs  entry.asm  lang_item.rs  main.rs  sbi.rs  stack_trace.rs
os/src/ophelia_log/: mod.rs
os/src/sync/: mod.rs  upsafe_cell.rs
os/src/syscall/: fs.rs  mod.rs  process.rs
os/src/trap/: content.rs  context.rs  mod.rs  trap.S
src/: boot.rs  console.rs  logging.rs  main.rs  sbi.rs
src/asm/: boot.S
src/lds/: linker.ld
stacktrace/: Cargo.toml
stacktrace/src/: lib.rs
user/: Cargo.toml  Makefile
user/src/: lang_item.rs  lib.rs  syscall.rs
user_lib/: Cargo.toml  Makefile
user_lib/src/: console.rs  lang_item.rs  lib.rs  linker.ld
