[package]
name = "kernel"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
sbi-rt = { version = "0.0.2", features = ["legacy"] }
riscv = { git = "https://github.com/rcore-os/riscv", features = ["inline-asm"] }
logger = { path = "../logger" }
stacktrace = { path = "../stacktrace" }

[profile.release]
debug = true
